--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,20 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <build>
+        <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.0.2</version>
+            <configuration>
+            <archive>
+                <manifest>
+                <mainClass>br.com.snakegame.Main</mainClass>
+                </manifest>
+            </archive>
+            </configuration>
+        </plugin>  
+        </plugins>
+    </build>
 </project>
